# TrueWeb

./: .env.example  .gitignore  ENV_SETUP.md  LICENSE  README.md  TrueWeb.spec  app.py  main.py  presentation_script.txt  pyproject.toml  requirements.txt
Report/: main.tex
Report/Appendix/: Appendix.tex
Report/Chapter/: Objectives.tex  Signature.tex
Report/Conclusion/: Conclusion.tex  Limitation_and_Future.tex
Report/Evaluation/: Evaluation_and_Testing.tex
Report/General information/: Abstract.tex  General infomation.tex  Plan.tex
Report/Implementation/: Extention.tex  Implementation.tex  UI.tex
Report/Introduction/: Problem.tex  Related_Work.tex  Solution.tex
Report/Methodology/: Methodology.tex  Scoring_System.tex  System_Overview.tex
Report/References/: references.bib
Report/Title/: title.tex
backend/: .env.example  AI_confidence.py  DAandSR.py  ENV_SETUP.md  calculate_score.py  config.py  env_loader.py  firebaseDB.py  html_heuristic.py  link_reciever.py  localserver.py  pattern_analysis.py  protocol.py  reputation.py  review.py  scoring_system.py  ssl_certificate.py  take_screenshot.py  user.py
backend/services/: ip.py  location.py  redirection.py  whois_service.py
backend/utils/: url_utils.py
extension/: background.js  content.js  manifest.json
frontend/: UI_helpers.py  configuration.py  home_page.py  info_page.py  loading_page.py  login_page.py  main_window.py  respond_window.py  result_components.py  result_page.py  settings_page.py  system_tray_utils.py  user_review.py  write_review_page.py
